--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
-body{
-    background: url(Clean-Backgrounds-For-Desktop.jpg) no-repeat center center fixed;
-    -webkit-background: cover;
-    -moz-background: cover;
-    -o-background: cover;
-    background: cover;
+body, html{
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+#root{
+    height: 100%;
+    width: 100%;
+    background-color: #222  ;
 }
